# code-insights-rs

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: annotation.rs  error.rs  lib.rs  report.rs  validation.rs
