[package]
name = "code_insights"
version = "0.1.0"
authors = ["Fredrik Larsson <nossralf@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "1.0"
