[package]
name = "code_insights"
version = "0.1.1"
authors = ["Fredrik Larsson <nossralf@gmail.com>"]
description = "Types for Bitbucket Code Insights"
categories = ["development-tools"]
keywords = ["bitbucket"]
edition = "2021"
license = "MIT"
repository = "https://github.com/nossralf/code-insights-rs/"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "1.0"
